# llm-d-benchmarking-agent

./: .gitignore  CLAUDE.md  DEVICE_BOOTSTRAP.md  README.md  install.sh  todo
llm-d-benchmarking-agent-project/: .dockerignore  .env.example  .gitignore  CLAUDE.md  COMMIT_VERIFICATION.md  CONTEXT.md  Dockerfile  FEATURES.md  INTERACTIVE_TEST_GUIDE.md  Makefile  NOTICE  PROGRESS.md  PROPOSAL_ROADMAP.md  README.md  ROADMAP.md  ROADMAP_V4.md  install-mcp.sh  install.sh  llm-d-benchmarking-agent-proposal.md  plan.md  pyproject.toml  run.sh  todo
llm-d-benchmarking-agent-project/.claude/: settings.json
llm-d-benchmarking-agent-project/.claude/hooks/: auto_merge_worktree.sh  context_sync.sh  git_add_guard.sh  gpu_context.md  gpu_context.sh  recon_lib.sh  record_lesson.sh  reflect_session_end.sh  ruff_autofix.sh  tool_error_capture.sh  tool_lesson_inject.sh  transcript_error_capture.sh  worktree_gate.sh
llm-d-benchmarking-agent-project/.github/workflows/: image-publish.yml
llm-d-benchmarking-agent-project/app/: config.py  dig.py  main.py  paths.py  web.py
llm-d-benchmarking-agent-project/app/agent/: CLAUDE.md  cards.py  channel.py  context_mgmt.py  engine.py  events.py  glossary.py  lifecycle.py  loop.py  prompt.py  results_card.py  session.py  suggestions.py  suggestions.yaml  tool_result_budget.py  transcript.py  welcome.py  ws_schemas.py
llm-d-benchmarking-agent-project/app/capacity/: CLAUDE.md  __init__.py  planner.py
llm-d-benchmarking-agent-project/app/llm/: CLAUDE.md  agent_sdk_provider.py  anthropic_provider.py  model_catalog.py  openai_provider.py  provider.py  sdk_options.py
llm-d-benchmarking-agent-project/app/mcp/: CLAUDE.md  DESIGN.md  README.md  __init__.py  __main__.py  adapters.py  approval.py  content.py  context_factory.py  events.py  instructions.py  prompts.py  resources.py  server.py
llm-d-benchmarking-agent-project/app/observability/: CLAUDE.md  __init__.py  cot_trace.py  instrument.py  logctx.py  logging.py  metrics.py  resource_poller.py
llm-d-benchmarking-agent-project/app/orchestrator/: CLAUDE.md  __init__.py  chaos.py  checkpoint.py  controller.py  faults.py  job.py  kube.py  readiness.py  resilience.py  restart.py
llm-d-benchmarking-agent-project/app/packaging/: CLAUDE.md  __init__.py  assets.py  gist_publish.py  report_card.py  shared_chat.py
llm-d-benchmarking-agent-project/app/readiness/: CLAUDE.md  __init__.py  diagnostics.py  probes.py
llm-d-benchmarking-agent-project/app/security/: CLAUDE.md  _validator.py  allowlist.py  auth.py  policy.py  quota.py  runner.py
llm-d-benchmarking-agent-project/app/storage/: CLAUDE.md  autotune.py  history.py  provenance.py  retention.py  share.py
llm-d-benchmarking-agent-project/app/tools/: CLAUDE.md  advanced.py  aggregate_runs.py  analyze.py  autotune.py  cancel.py  capacity.py  catalog.py  command.py  command_exec.py  compare.py  config_artifact.py  context.py  convert_guide.py  discover.py  doe.py  execute.py  history.py  (+24 more)
llm-d-benchmarking-agent-project/docs/: API.md  ARCHITECTURE.md  BENCHMARK_FEATURE_COVERAGE.md  BUG_HUNT_LOG.md  CHANGELOG.md  CLUSTER_SERVICE_DEPLOY.md  CONFIG_AUDIT_LOG.md  CONTEXT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEV_PLUGINS.md  FEATURES.md  GPU_CLUSTER_RUNBOOK.md  INTERACTIVE_TEST_GUIDE.md  MCP.md  OPEN_ITEMS.md  PROJECT_BRAIN_REFERENCE.md  PROJECT_LAYOUT_REORG.md  PROPOSAL_GAP_REPORT.md  QA_FINDINGS_LOG.md  README.md  SECURITY.md  TODO.md  TODO_BATCH.md  TROUBLESHOOTING.md  UPSTREAM_REUSE_PATHS.md  USEFUL_REPO_DOCS.md  USER_GUIDE.md  VALIDATION.md
llm-d-benchmarking-agent-project/knowledge/: CLAUDE.md  accelerators.yaml  analysis.md  api_trust.md  author_spec_workload.md  autoscaling.md  autotune_strategy.md  benchmark_feature_coverage.md  capacity.md  cloud_results_sink.md  collect_only.md  conversation_style.md  convert_guide.md  dataset_replay.md  deploy_path_playbook.md  epp_headers.yaml  gateway_class.md  gateway_readiness.md  glossary.md  governance.md  harness_debug.md  harness_sizing.md  history.md  infra_providers.yaml  infrastructure_preconditions.yaml  key_docs.yaml  logging.md  multi_harness.md  multi_stack.md  observability.md  observability_grafana.md  observability_monitoring.md  observability_streaming.md  observability_tracing.md  orchestrator.md  packaging.md  phase_timeouts.md  preconditions.md  quickstart_playbook.md  readiness_probes.md  (+22 more)
llm-d-benchmarking-agent-project/scripts/: _env.sh  capacity_check.py  install-git-hooks.sh  install-mcp.sh  install.sh  install_local.sh  install_metrics_server.sh  install_prereqs.sh  install_service.sh  kind_egress_heal.sh  measure_context.py  provision_hf_secret.py  publish_shared_chat.sh  run.sh  run_eval_isolated.sh  setup-claude-plan.sh  validate_flows.py
llm-d-benchmarking-agent-project/security/: allowlist.yaml  command_policy.yaml
llm-d-benchmarking-agent-project/tests/: CLAUDE.md  _auth.py  _helpers.py  _scripted.py  _sdk_fake.py  conftest.py  orchestrator_fakes.py  test_accel_advisor.py  test_agent_sdk_provider.py  test_aggregate_runs.py  test_allowlist.py  test_analyze.py  test_analyze_plots.py  test_api_trust.py  test_artifacts.py  test_autotune.py  test_capacity.py  test_capacity_gated.py  test_catalog.py  test_chaos_injection.py  test_cloud_results_sink.py  test_cluster_access.py  test_collect_only.py  test_command_events.py  test_concurrency.py  test_context_mgmt.py  test_convert_guide.py  test_cot_trace.py  test_dataset_replay.py  test_deterministic_msgs.py  test_doe.py  test_endpoint_readiness.py  test_epp_headers.py  test_events.py  test_gated_guardrail.py  test_gateway_class.py  test_gateway_readiness.py  test_gist_publish.py  test_glossary.py  test_governance.py  (+101 more)
llm-d-benchmarking-agent-project/ui/: app.js  index.html  preview.html  styles.css
(+386 files in other folders)
