[project]
name = "llm-d-benchmarking-agent"
version = "0.1.0"
description = "Local chat-based assistant agent that helps non-experts run llm-d-benchmark"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "jsonschema>=4.22",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "anthropic>=0.40",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.llm", "app.agent", "app.tools", "app.security", "app.validation", "app.knowledge", "app.orchestrator", "app.capacity", "app.observability", "app.storage", "app.packaging"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
