[project]
name = "llm-d-benchmarking-agent"
version = "0.1.0"
description = "Local chat-based assistant agent that helps non-experts run llm-d-benchmark"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "jsonschema>=4.22",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "openai>=1.40",
    "claude-agent-sdk>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "pytest-xdist>=3.0",   # parallel test execution (`-n auto`) — full suite ~6.5x faster
    "httpx>=0.27",         # Starlette TestClient transport (tests only; runtime gets it via anthropic/openai)
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.llm", "app.agent", "app.tools", "app.tools.schemas", "app.security", "app.validation", "app.orchestrator", "app.capacity", "app.readiness", "app.observability", "app.storage", "app.packaging"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Per-test hang backstop. The healthy hermetic suite runs in ~15s; a single test should never
# take 60s. If one does (e.g. a non-hermetic test reaching a live kind cluster, or an approval
# gate deadlock), pytest-timeout fails it fast WITH a traceback instead of wedging the run for
# the wall-clock ceiling. Requires the pytest-timeout dev extra.
timeout = 60
timeout_method = "signal"

# --- Quality gates (Phase 14): ruff + mypy + coverage -------------------------
# Config only; no app behaviour change. The ruleset is tuned to the existing
# style (no churn-heavy reformatting), mypy is meaningful-but-achievable
# (genuine bugs flagged, the typed-SDK boundary relaxed), and coverage gates the
# suite a few points below the measured baseline (see `make coverage`).

[tool.ruff]
target-version = "py311"
line-length = 100
# The runtime tree (mechanism); knowledge/ + docs are data, never linted.
src = ["."]
extend-exclude = ["workspace", ".venv"]

[tool.ruff.lint]
# A sensible modern ruleset matching the existing style. E501 (line length) is
# deliberately omitted — the codebase favours longer explanatory lines and
# enforcing it would be pure churn with no behaviour benefit.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports/names, undefined names)
    "I",    # isort (import ordering)
    "B",    # flake8-bugbear (likely bugs)
    "UP",   # pyupgrade (modern syntax for the pinned py311 floor)
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line-too-long — existing style keeps explanatory long lines
    "B008",  # function-call-in-default-arg — FastAPI Depends(...) is idiomatic
]

[tool.ruff.lint.per-file-ignores]
# Tests intentionally use patterns ruff flags as "smells" in app code: broad
# assertRaises(Exception), assert False, nested with-blocks, dict()/list() calls
# for readability. These are fine in test scaffolding.
"tests/**" = ["B017", "B011", "SIM117", "C408"]

[tool.mypy]
python_version = "3.11"
files = ["app"]
# Meaningful but achievable — NOT --strict on the whole tree. We flag genuine
# Optional/arg-type bugs while tolerating the dynamic Pydantic/FastAPI shapes
# and untyped third-party returns.
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
# The LLM provider modules hand richly-typed vendor SDKs (anthropic / openai)
# our own dict-shaped message/tool payloads. Type-checking those call sites
# against the SDK's exhaustive overloads adds no value here (the payloads are
# validated by our own schemas), so relax arg-type/call-overload at that
# boundary only — the rest of the tree stays checked.
module = ["app.llm.anthropic_provider", "app.llm.openai_provider"]
disable_error_code = ["arg-type", "call-overload"]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["app/__init__.py", "*/__init__.py"]

[tool.coverage.report]
# Show missing lines and don't let __repr__/TYPE_CHECKING-only branches skew the
# number. The fail-under threshold lives on the CLI / Makefile (see `coverage`
# target) so it can be tuned without editing tool config.
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
